@@ -255,7 +255,7 @@ int ExecutiveMapHalve(PyMOLGlobals *G,char *name,int state,int smooth);
 
 int ExecutiveMultiSave(PyMOLGlobals *G,char *fname,char *name,int state,int append);
 int ExecutiveIdentifyObjects(PyMOLGlobals *G,char *s1,int mode,int **indexVLA,ObjectMolecule ***objVLA);
-int ExecutiveCombineObjectTTT(PyMOLGlobals *G,char *name,float *ttt);
+int ExecutiveCombineObjectTTT(PyMOLGlobals *G,char *name,float *ttt,int reverse_order);
 int ExecutiveSetObjectTTT(PyMOLGlobals *G,char *name,float *ttt,int state,int quiet);
 int ExecutiveGetObjectTTT(PyMOLGlobals *G,char *name,float **ttt,int state,int quiet);
 int ExecutiveGetObjectMatrix(PyMOLGlobals *G,char *name,int state,double **matrix);
